# kacp

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yml  rustfmt.yml
deploy/: kustomization.yaml
deploy/config/: cm.yaml  kustomization.yaml
deploy/controller/: cm.yaml  kacp.yaml  kustomization.yaml  rbac.yaml
deploy/crd/: crd.yaml
src/: config.rs  controller.rs  crdgen.rs  kacp.rs  lib.rs  main.rs
