[package]
name = "kacp"
version = "0.5.0"
authors = ["Sébastien Huss <sebastien.huss@gmail.com>"]
edition = "2021"
default-run = "kacp"
license = "Apache-2.0"
publish = false

# use "cargo install cargo-commander", then "cargo cmd generate"
[package.metadata.commands]
generate = { cmd=[
    "cargo run --bin crdgen > deploy/crd/crd.yaml",
]}
crd = { cmd=[
    "cargo run --bin crdgen > deploy/crd/crd.yaml",
    "kubectl apply -f deploy/crd/crd.yaml"
]}
fmt = { cmd=[
    "cargo +nightly fmt"
]}

[[bin]]
doc = false
name = "dummy"
path = "dummy.rs"

[[bin]]
doc = false
name = "kacp"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[lib]
name = "controller"
path = "src/lib.rs"

[dependencies]
actix-web = "4.9.0"
futures = "0.3.28"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
k8s-openapi = { version = "0.22.0", features = ["latest"] }
schemars = { version = "0.8.12", features = ["chrono"] }
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.25"
thiserror = "2.0.6"
tracing = { version = "0.1.40"}
clap = { version = "4.5.13", features = ["derive", "env"] }
env_logger = "0.11.5"

[dependencies.kube]
features = ["runtime", "client", "derive" ]
version = "0.91.0"
